--- a/404.html
+++ b/404.html
@@ -1,62 +1,27 @@
 <!doctype html>
-<html lang="en">
+<html class="no-js" lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Page Not Found</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    * {
-      line-height: 1.2;
-      margin: 0;
-    }
+	<meta charset="utf-8">
+        <title>Windwalk's Boombox</title>
+        <meta name="description" content="Listen to Windwalk's homemade beats. Genre: Trap, Hip hop.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    html {
-      color: #888;
-      display: table;
-      font-family: sans-serif;
-      height: 100%;
-      text-align: center;
-      width: 100%;
-    }
+        <link rel="icon" href="cassette.svg">
+        <link rel="apple-touch-icon" href="cassette.svg">
 
-    body {
-      display: table-cell;
-      vertical-align: middle;
-      margin: 2em auto;
-    }
-
-    h1 {
-      color: #555;
-      font-size: 2em;
-      font-weight: 400;
-    }
-
-    p {
-      margin: 0 auto;
-      width: 280px;
-    }
-
-    @media only screen and (max-width: 280px) {
-
-      body,
-      p {
-        width: 95%;
-      }
-
-      h1 {
-        font-size: 1.5em;
-        margin: 0 0 0.3em;
-      }
-
-    }
-  </style>
+        <link rel="stylesheet" href="css/config/normalize.css">
+        <link rel="stylesheet" href="css/config/main.css">
+        <link href="fontawesome/css/all.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/my_css/404.css">
 </head>
 
 <body>
-  <h1>Page Not Found</h1>
-  <p>Sorry, but the page you were trying to view does not exist.</p>
+	<div class="message">
+		<h3>Error 404</h3>
+		<h4>Page not found</h4>
+		<h5>Go back to <a href="/index.html">homepage</a></h5>
+	</div>
 </body>
 
 </html>
-<!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
