Added hide/show player. Almost fixed cookie issue.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
                 </div>
 
 
+                <div class="div_show_hide_player">
+                        <button type="button" name="btn_hide_player" id="btn_hide_player" class="btn_hide_player"><i class="fas fa-eye-slash"></i></button>
+                        <button type="button" name="btn_show_player" id="btn_show_player" class="btn_show_player"><i class="fas fa-eye"></i></button>
+                </div>
 
 
-                <div class="div_player_component">
+                <div class="div_player_component" id="player">
                         <img src="images/Night Sky.jpg" class="background_image">
 
 
