Updated link to point to project's repo.

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                         </div>
                                         
                                         <div class="buttons">
-                                                <a href="#">Project repo</a>
+                                                <a href="https://github.com/windwalk-bushido/Windwalk-s-Boombox">Project repo</a>
                                                 <a href="#">My portfolio</a>
                                         </div>
                                 </div>
